--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Jay Embaye | Designed among the stars ✨ in Gold, White, Blue & Black</p>
+    <p>© 2025 Jay Embaye </p>
   </footer>
 
   <script>
