Add ExcuseAI app section to index.html
Added a new section for the ExcuseAI app with details and features.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     .app-section p {
       color: #dcdcdc;
       margin-bottom: 1rem;
+      line-height: 1.5;
     }
     .app-section a {
       text-decoration: none;
@@ -171,6 +172,28 @@
         <a href="https://apps.apple.com/us/app/dream-translator/id6746648758" target="_blank">View on App Store</a>
       </div>
     </div>
+
+    <!-- NEW Excuse AI APP SECTION -->
+    <div class="app-section">
+      <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/45/a1/4f/45a14f9a-8b13-09f5-61b7-031715c8f5b8/AppIcon-0-1x_U007emarketing-0-0-0-7-0-0-85-220.png/230x0w.webp" alt="ExcuseAI">
+      <div>
+        <h2>ExcuseAI</h2>
+        <p>
+          Tired of lame excuses that nobody believes? Meet <strong>ExcuseAI</strong>, the fun and intelligent app that crafts personalized, creative excuses using advanced AI technology.
+          Whether you need to explain a missed meeting, a forgotten birthday, or an unexpected absence, ExcuseAI has you covered!
+        </p>
+        <p><strong>What Makes ExcuseAI Special:</strong><br>
+        - AI-Powered Creativity powered by Google's Gemini AI<br>
+        - Multiple categories: Work, School, Dating, Family, Friends, and more<br>
+        - Choose your tone: Funny, Formal, Creative, Believable, or Sarcastic<br>
+        - Smart formatting for SMS, Email, or Notes</p>
+        <p><strong>Key Features:</strong><br>
+        Daily Excuse of the Day • Personal Excuse History • Smart Statistics • Easy Sharing • Customizable Experience</p>
+        <p><strong>Perfect For:</strong> Professionals, Students, Social situations, Dating scenarios, or anyone who loves clever humor.</p>
+        <a href="https://apps.apple.com/us/app/excuseai/id6754696355" target="_blank">View on App Store</a>
+      </div>
+    </div>
+    <!-- END Excuse AI APP SECTION -->
 
     <div class="app-section">
       <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/f3/22/92/f3229296-4ac5-95ff-fae9-56c2b44d53e4/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/230x0w.webp" alt="Hangry Detector">
