--- a/index.html
+++ b/index.html
@@ -195,14 +195,17 @@
     </div>
     <!-- END Excuse AI APP SECTION -->
 
-    <div class="app-section">
-      <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/f3/22/92/f3229296-4ac5-95ff-fae9-56c2b44d53e4/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/230x0w.webp" alt="Hangry Detector">
-      <div>
-        <h2>Hangry Detector (Coming Soon)</h2>
-        <p>Stay tuned for my next big release. Detect hunger-driven mood swings and keep life smooth with Hangry Detector.</p>
-        <a href="https://apps.apple.com/us/app/hangry-detector/id6753637139" target="_blank">Check App Store Page</a>
-      </div>
+   <div class="app-section">
+  <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/f3/22/92/f3229296-4ac5-95ff-fae9-56c2b44d53e4/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/230x0w.webp" alt="Hangry Detector">
+  <div>
+    <h2>Hangry Detector</h2>
+    <p>Detect hunger-driven mood swings and keep life smooth with Hangry Detector. Using smart analysis and your device’s camera, it helps you understand when hunger is taking over — so you can stay cool, calm, and well-fed.</p>
+    <div style="display:flex; gap:10px; flex-wrap:wrap;">
+      <a href="https://apps.apple.com/us/app/hangry-detector/id6753637139" target="_blank">Check App Store Page</a>
+      <a href="hangry-privacy.html" target="_blank">Privacy Policy</a>
     </div>
+  </div>
+</div>
   </section>
 
   <section class="socials">
