Update Privacy Policy link and styling

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <p>Detect hunger-driven mood swings and keep life smooth with Hangry Detector. Using smart analysis and your device’s camera, it helps you understand when hunger is taking over — so you can stay cool, calm, and well-fed.</p>
     <div style="display:flex; gap:10px; flex-wrap:wrap;">
       <a href="https://apps.apple.com/us/app/hangry-detector/id6753637139" target="_blank">Check App Store Page</a>
-      <a href="hangry-privacy.html" target="_blank">Privacy Policy</a>
+      <a href="privacy-policy.html" class="button" target="_blank">Privacy Policy</a>
     </div>
   </div>
 </div>
