Add VibeLogs app section to index.html
Added VibeLogs section with app details and features.

--- a/index.html
+++ b/index.html
@@ -204,6 +204,27 @@
       <a href="https://apps.apple.com/us/app/hangry-detector/id6753637139" target="_blank">Check App Store Page</a>
       <a href="privacy-policy.html" class="button" target="_blank">Privacy Policy</a>
     </div>
+    <div class="app-section">
+  <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/ab/3d/4a/ab3d4a76-bb8e-82b1-4cb5-b1a55b66f514/AppIcon-0-1x_U007emarketing-0-0-0-7-0-0-85-220.png/230x0w.webp" alt="VibeLogs">
+  <div>
+    <h2>VibeLogs</h2>
+    <p>Discover VibeLogs, the beautifully simple way to track your moods and emotions. Whether you're feeling happy, sad, or anything in between, VibeLogs provides a safe and private space to document your feelings and reflect on your day.</p>
+    <p><strong>Key Features:</strong><br>
+      • Easy Mood Logging with emojis<br>
+      • Add Context with notes and photos<br>
+      • Mood Timeline to visualize emotional trends<br>
+      • Insightful Statistics (streaks, totals, insights)<br>
+      • Daily Inspirational Quotes<br>
+      • Share Your Journey with friends<br>
+      • Private & Secure: Data stored locally on your device
+    </p>
+    <p><strong>Start your journey to a happier, healthier you with VibeLogs today!</strong></p>
+    <div style="display:flex; gap:10px; flex-wrap:wrap;">
+      <a href="https://apps.apple.com/us/app/vibelogs/id6754963956" target="_blank">View on App Store</a>
+      <a href="vibelogs-privacy-policy.html" class="button" target="_blank">Privacy Policy</a>
+    </div>
+  </div>
+</div>
   </div>
 </div>
   </section>
